--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,25 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+  --color-primary: #B8860B; 
+  --color-primary-hover: #DAA520;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --color-text-bright: #F5F5F5;
+
+  --default-padding: 12px;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--color-primary));
+}
+
+.button-wrapper {
+  background-color: var(--color-primary);
+  color: var(--color-text-bright);
+  font-weight: bold;
+  padding: var(--default-padding);
+}
+
+.button-wrapper:hover {
+    background-color: var(--color-primary-hover);
 }
