--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,7 @@ body {
   color: var(--color-text-bright);
   font-weight: bold;
   padding: var(--default-padding);
+  cursor: pointer;
 }
 
 .button-wrapper:hover {
