main: get started on section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,7 +43,13 @@ body {
   background-color: var(--color-background-dark-hover);
 }
 
+section {
+  width: 100%;
+  color: var(--color-text-bright);
+}
+
 .section-background {
+  width: 100%;
   background-color: var(--color-background-dark);
 }
 
