--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,3 +47,16 @@ footer {
   color: var(--color-text-bright);
   background-color: var(--color-background-dark);
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
