--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,46 +6,10 @@
   --color-primary: #B8860B; 
   --color-primary-hover: #DAA520;
 
-  --color-text-bright: #F5F5F5;
+  --color-text-light: #F5F5F5;
 
   --color-background-dark: #333333;
   --color-background-dark-hover: #666666;
-}
-
-body {
-  color: var(--color-primary);
-}
-
-.button-wrapper.primary {
-  background-color: var(--color-primary);
-  color: var(--color-text-bright);
-}
-
-.button-wrapper.secondary {
-  background-color: var(--color-background-dark);
-  color: var(--color-text-bright);
-  border: 1px solid var(--color-text-bright)
-}
-
-.button-wrapper.primary:hover {
-    background-color: var(--color-primary-hover);
-}
-
-.button-wrapper.secondary:hover {
-  background-color: var(--color-background-dark-hover);
-}
-
-section {
-  color: var(--color-text-bright);
-}
-
-.section-background {
-  background-color: var(--color-background-dark);
-}
-
-footer {
-  color: var(--color-text-bright);
-  background-color: var(--color-background-dark);
 }
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
@@ -59,8 +23,4 @@ footer {
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
-}
-
-.overlay {
-  background-color: rgba(51, 51, 51, 0.9);
 }
