--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -2,12 +2,12 @@
 
 /* Style the input field */
 .react-datepicker__input-container input {
-  @apply invisible md:visible bg-transparent text-black border border-gray-300 rounded py-2 px-4;
+  @apply invisible md:visible bg-transparent text-black border border-primary-regular hover:border-primary-light  py-2 px-4;
 }
 
 /* Style the date picker pop-up */
 .react-datepicker {
-  @apply invisible md:visible bg-white border border-gray-300 rounded shadow-lg;
+  @apply invisible md:visible bg-white border border-primary-regular hover:border-primary-light  shadow-lg;
 }
 
 /* Style the date picker header */
