main: add text as input element

--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -1,7 +1,7 @@
 /* datePickerStyles.css */
 
 /* Style the input field */
-.react-datepicker__input-container input {
+.react-datepicker__input-container div {
   @apply invisible max-w-full p-0 md:p-2 md:visible bg-transparent text-primary-regular border border-primary-regular hover:border-primary-light  py-2 px-4;
 }
 
