main: add icons

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,3 +105,13 @@
   font-size: 1152.61px;
   font-family: 'Engravers MT'
 }
+
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+.instagram-icon {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+}
