--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,3 +121,7 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+body {
+  min-width: 415px;
+}
