--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -2,12 +2,12 @@
 
 /* Style the input field */
 .react-datepicker__input-container div {
-  @apply invisible max-w-full p-0 md:p-2 md:visible bg-transparent text-primary-regular border border-primary-regular hover:border-primary-light  py-2 px-4;
+  @apply invisible max-w-full p-0 md:p-2 md:visible bg-transparent text-primary-500 border border-primary-500 hover:border-primary-300  py-2 px-4;
 }
 
 /* Style the date picker pop-up */
 .react-datepicker {
-  @apply invisible md:visible bg-white border border-primary-regular hover:border-primary-light  shadow-lg;
+  @apply invisible md:visible bg-white border border-primary-500 hover:border-primary-300  shadow-lg;
 }
 
 /* Style the date picker header */
